add standardjs lint-thingie, fix code to match, and so on

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "koa-router": "^5.4.0",
     "raw-body": "^2.1.7",
     "rethinkdb": "^2.3.3"
+  },
+  "devDependencies": {
+    "standard": "^8.1.0"
   }
 }
