--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,4 @@ services:
       - ./:/usr/src/app
     ports:
      - "5000:5000"
-    links:
-      - rethinkdb
-    environment:
-      - RETHINKDB_ADDR=rethinkdb
-      - RETHINKDB_PORT=28015
-    command: dockerize -wait tcp://rethinkdb:28015 -timeout 300s supervisor -w src,index.js index.js
-
-  rethinkdb:
-    container_name: "nordisktljus-db"
-    image: rethinkdb:latest
+    command: supervisor -w src,index.js index.js
