--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,13 @@ services:
     volumes:
       - ./:/usr/src/app
     ports:
-     - "5000:5000"
+      - "5000:5000"
+    links:
+      - mongo
     command: supervisor -w src,index.js index.js
+
+  mongo:
+    container_name: "nordisktljud-mongo"
+    image: "mongo:latest"
+    ports:
+      - "27017:27017"
