--- a/browser/package.json
+++ b/browser/package.json
@@ -17,16 +17,12 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "^6.5.0",
+    "bluebird": "^3.4.6",
+    "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "postcss-loader": "^0.8.1",
-    "rucksack-css": "^0.8.5",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.7.1",
-    "babel-runtime": "^6.5.0",
-    "classnames": "^2.2.3",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-hot-loader": "^1.3.0",
@@ -34,6 +30,13 @@
     "react-router": "^2.0.0",
     "react-router-redux": "^4.0.0",
     "redux": "^3.3.1",
-    "redux-actions": "^0.9.1"
+    "redux-actions": "^0.9.1",
+    "rucksack-css": "^0.8.5",
+    "style-loader": "^0.13.0",
+    "superagent": "^2.3.0",
+    "superagent-bluebird-promise": "^4.1.0",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.7.1"
   }
 }
