--- a/browser/package.json
+++ b/browser/package.json
@@ -31,6 +31,8 @@
     "react-router-redux": "^4.0.0",
     "redux": "^3.3.1",
     "redux-actions": "^0.9.1",
+    "redux-thunk": "^2.1.0",
+    "reset-css": "^2.2.0",
     "rucksack-css": "^0.8.5",
     "style-loader": "^0.13.0",
     "superagent": "^2.3.0",
