--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
     links:
       - mongo
     environment:
+      - PORT=5000
       - DATABASE_HOST=mongo
     command: supervisor -w src,index.js index.js
 
