--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - "5000"
     links:
       - mongo
+      - telnet
     environment:
       - PORT=5000
       - DATABASE_HOST=mongo
@@ -34,7 +35,16 @@ services:
     command: npm start
 
   mongo:
-    container_name: "nordisktljud-mongo"
+    container_name: "nordisktljus-mongo"
     image: "mongo:latest"
     ports:
       - "27017:27017"
+
+  telnet:
+    container_name: "nordisktljus-telnet"
+    build: ./telnet
+    ports:
+      - "5000"
+    environment:
+      - HOST=0.0.0.0
+      - PORT=5000
