--- a/browser/package.json
+++ b/browser/package.json
@@ -37,6 +37,7 @@
     "style-loader": "^0.13.0",
     "superagent": "^2.3.0",
     "superagent-bluebird-promise": "^4.1.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.7.1"
