--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - mongo
       - telnet
     environment:
+      - NODE_ENV=development
       - PORT=5000
       - DATABASE_HOST=mongo
     command: supervisor -w src,index.js index.js
