--- a/browser/package.json
+++ b/browser/package.json
@@ -22,7 +22,10 @@
     "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
+    "gsap": "^1.19.0",
     "postcss-loader": "^0.8.1",
+    "postcss-svg": "^1.0.6",
+    "postcss-svgo": "^2.1.5",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-hot-loader": "^1.3.0",
