--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       - NODE_ENV=development
       - PORT=5000
       - DATABASE_HOST=mongo
+      - DMX_HOST=telnet
+      - DMX_PORT=5000
     command: supervisor -w src,index.js index.js
 
   browser:
