--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - telnet
     environment:
       - NODE_ENV=development
-      - PORT=5000
+      - KOA_PORT=5000
       - DATABASE_HOST=mongo
       - DMX_HOST=telnet
       - DMX_PORT=5000
