--- a/browser/package.json
+++ b/browser/package.json
@@ -19,10 +19,12 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.5.0",
     "bluebird": "^3.4.6",
+    "bodymovin": "^4.4.15",
     "classnames": "^2.2.3",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
     "gsap": "^1.19.0",
+    "json-loader": "^0.5.4",
     "postcss-loader": "^0.8.1",
     "postcss-svg": "^1.0.6",
     "postcss-svgo": "^2.1.5",
