--- a/telnet/Dockerfile
+++ b/telnet/Dockerfile
@@ -1,11 +1,11 @@
 FROM node:11.1.0
 
-RUN mkdir -p /usr/src/telnet
-WORKDIR /usr/src/telnet
+RUN mkdir -p /usr/app
+WORKDIR /usr/app
 
-COPY . /usr/src/telnet
+COPY . /usr/app
 RUN npm install
 
 EXPOSE 5000
 
-CMD [ "npm", "start" ]
+CMD ["npm", "start"]
