--- a/browser/Dockerfile
+++ b/browser/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:11.1.0
 
-RUN mkdir -p /usr/src/browser
-WORKDIR /usr/src/browser
+RUN mkdir -p /usr/app
+WORKDIR /usr/app
 
-COPY package.json /usr/src/browser
+COPY package.json /usr/app
 RUN npm install
 
 EXPOSE 5000
